--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,92 @@
 
 @string{aps = {American Physical Society,}}
 
+
+@article{adli2025clic,
+  title={CLIC readiness report},
+  author={CLIC Collaboration},
+  journal={The European Physical Journal Special Topics},
+  pages={1--180},
+  year={2025},
+  publisher={Springer}
+}
+
+@article{rieker2025radiochromic,
+  title={Radiochromic film dosimetry for VHEE and UHDR: protocol adaptation and verification at the CLEAR facility},
+  author={Rieker, Vilde F and Bateman, Joseph J and Wroe, Laurence and Caloz, Misael and Grilj, Veljko and Aguiar, Ygor Q and Sch{\"u}ller, Andreas and Bailat, Claude and Farabolini, Wilfrid and Gilardi, Antonio and others},
+  journal={Frontiers in Physics},
+  volume={13},
+  pages={1597079},
+  year={2025},
+  publisher={Frontiers Media SA}
+}
+
+@article{king2025systematic,
+  title={A systematic investigation of beam losses and position-reconstruction techniques measured with a novel oBLM at CLEAR},
+  author={King, Montague and Benitez, Sara and Christie, Alexander and Effinger, Ewald and Esteban, Jose and Farabolini, Wilfrid and Gilardi, Antonio and Korysko, Pierre and Meyer, Jean Michel and Salvachua, Belen and others},
+  journal={Instruments},
+  volume={9},
+  number={1},
+  pages={4},
+  year={2025},
+  publisher={MDPI}
+}
+
+@article{rieker2024active,
+  title={Active dosimetry for VHEE FLASH radiotherapy using beam profile monitors and charge measurements},
+  author={Rieker, Vilde F and Corsini, Roberto and Stapnes, Steinar and Adli, Erik and Farabolini, Wilfrid and Grilj, Veljko and Sjobak, Kyrre N and Wroe, Laurence M and Aksoy, Avni and Robertson, Cameron S and others},
+  journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume={1069},
+  pages={169845},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{arpaia2024roadmap,
+  title={Roadmap for Measurement and Applications: An Overview on Quench Detection Techniques for High-Temperature Superconducting Cables and Magnets},
+  author={Arpaia, Pasquale and Cuneo, Davide and Esposito, Antonio and Gilardi, Antonio and Ramos, Pedro M},
+  journal={IEEE Instrumentation \& Measurement Magazine},
+  volume={27},
+  number={9},
+  pages={29--37},
+  year={2024},
+  publisher={IEEE}
+}
+
+@article{liu2023user,
+  title={A user-friendly plug-and-play cyclic olefin copolymer-based microfluidic chip for room-temperature, fixed-target serial crystallography},
+  author={Liu, Zhongrui and Gu, Kevin K and Shelby, Megan L and Gilbile, Deepshika and Lyubimov, Artem Y and Russi, Silvia and Cohen, Aina E and Narayanasamy, Sankar Raju and Botha, Sabine and Kupitz, Christopher and others},
+  journal={Biological Crystallography},
+  volume={79},
+  number={10},
+  pages={944--952},
+  year={2023},
+  publisher={International Union of Crystallography}
+}
+
+@article{ferrentino2023analysis,
+  title={Analysis of powering and quench protection of the SIGRUM superconducting combined-function dipole magnet},
+  author={Ferrentino, Vittorio and Arpaia, Pasquale and Gilardi, Antonio and Karppinen, Mikko and Kokkinos, Charilaos and Ravaioli, Emmanuele},
+  journal={IEEE Transactions on Applied Superconductivity},
+  volume={33},
+  number={7},
+  pages={1--8},
+  year={2023},
+  publisher={IEEE}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 @book{einstein1920relativity,
   title={Relativity: the Special and General Theory},
   author={Einstein, Albert},
