--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -77,6 +77,158 @@
   publisher={IEEE}
 }
 
+@article{cropp2023virtual,
+  title={Virtual-diagnostic-based time stamping for ultrafast electron diffraction},
+  author={Cropp, Frederick and Moos, Lauren and Scheinker, Alexander and Gilardi, Antonio and Wang, Dan and Paiagua, Sergio and Serrano, Carlos and Musumeci, Pietro and Filippetto, Daniele},
+  journal={Physical Review Accelerators and Beams},
+  volume={26},
+  number={5},
+  pages={052801},
+  year={2023},
+  publisher={APS}
+}
+
+@article{chen2023broadband,
+  title={Broadband spectral combining of three pulse-shaped fiber amplifiers with 42fs compressed pulse duration},
+  author={Chen, Siyun and Zhou, Tong and Du, Qiang and Wang, Dan and Gilardi, Antonio and Vay, Jean-Luc and Li, Derun and van Tilborg, Jeroen and Schroeder, Carl and Esarey, Eric and others},
+  journal={Optics Express},
+  volume={31},
+  number={8},
+  pages={12717--12724},
+  year={2023},
+  publisher={Optica Publishing Group}
+}
+
+@article{lauria2022rotating,
+  title={Rotating-coil measurement system for small-bore-diameter magnet characterization},
+  author={Lauria, Anna and Arpaia, Pasquale and Buzio, Marco and Gilardi, Antonio and Parvis, Marco and Pentella, Mariano and Sabbatini, Lucia and Simoni, Enzo and Vannozzi, Alessandro},
+  journal={Sensors},
+  volume={22},
+  number={21},
+  pages={8359},
+  year={2022},
+  publisher={MDPI}
+}
+
+@article{wang2022machine,
+  title={Machine learning pattern recognition algorithm with applications to coherent laser combination},
+  author={Wang, Dan and Du, Qiang and Zhou, Tong and Gilardi, Antonio and Kiran, Mariam and Mohammed, Bashir and Li, Derun and Wilcox, Russell},
+  journal={IEEE Journal of Quantum Electronics},
+  volume={58},
+  number={6},
+  pages={1--9},
+  year={2022},
+  publisher={IEEE}
+}
+
+@article{du2022experimental,
+  title={Experimental beam combining stabilization using machine learning trained while phases drift},
+  author={Du, Qiang and Wang, Dan and Zhou, Tong and Gilardi, Antonio and Kiran, Mariam and Mohammed, Bashir and Li, Derun and Wilcox, Russell},
+  journal={Optics Express},
+  volume={30},
+  number={8},
+  pages={12639--12653},
+  year={2022},
+  publisher={Optica Publishing Group}
+}
+
+@article{lerner2022analysis,
+  title={Analysis of the photoneutron field near the THz dump of the CLEAR accelerator at CERN with SEU measurements and simulations},
+  author={Lerner, Giuseppe and Coronetti, Andrea and Kempf, Jean Ma{\"e}l and Al{\'\i}a, Rub{\'e}n Garc{\'\i}a and Cerutti, Francesco and Prelipcean, Daniel and Cecchetto, Matteo and Gilardi, Antonio and Farabolini, Wilfrid and Corsini, Roberto},
+  journal={IEEE Transactions on Nuclear Science},
+  volume={69},
+  number={7},
+  pages={1541--1548},
+  year={2022},
+  publisher={IEEE}
+}
+
+@article{kokurewicz2021experimental,
+  title={An experimental study of focused very high energy electron beams for radiotherapy},
+  author={Kokurewicz, Karolina and Brunetti, Enrico and Curcio, Alessandro and Gamba, Davide and Garolfi, Luca and Gilardi, Antonio and Senes, Eugenio and Sjobak, Kyrre Ness and Farabolini, Wilfrid and Corsini, Roberto and others},
+  journal={Communications Physics},
+  volume={4},
+  number={1},
+  pages={33},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{small2021evaluating,
+  title={Evaluating very high energy electron RBE from nanodosimetric pBR322 plasmid DNA damage},
+  author={Small, KL and Henthorn, NT and Angal-Kalinin, Deepa and Chadwick, AL and Santina, Elham and Aitkenhead, Adam and Kirkby, Karen J and Smith, RJ and Surman, M and Jones, J and others},
+  journal={Scientific Reports},
+  volume={11},
+  number={1},
+  pages={3341},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{poppinga2020vhee,
+  title={VHEE beam dosimetry at CERN Linear Electron Accelerator for Research under ultra-high dose rate conditions},
+  author={Poppinga, Daniela and Kranzer, Rafael and Farabolini, Wilfrid and Gilardi, Antonio and Corsini, Roberto and Wyrwoll, Vanessa and Looe, Hui Khee and Delfs, Bj{\"o}rn and Gabrisch, Lukas and Poppe, Bj{\"o}rn},
+  journal={Biomedical Physics \& Engineering Express},
+  volume={7},
+  number={1},
+  pages={015012},
+  year={2020},
+  publisher={IOP Publishing}
+}
+
+@article{sabato2020measurement,
+  title={A measurement method based on RF deflector for particle bunch longitudinal parameters in linear accelerators},
+  author={Sabato, Luca and Arpaia, Pasquale and Gilardi, Antonio and Mostacci, Andrea and Palumbo, Luigi and Variola, Alessandro},
+  journal={IEEE Transactions on Instrumentation and Measurement},
+  volume={70},
+  pages={1--9},
+  year={2020},
+  publisher={IEEE}
+}
+
+@article{arpaia2020enhancing,
+  title={Enhancing particle bunch-length measurements based on radio frequency deflector by the use of focusing elements},
+  author={Arpaia, Pasquale and Corsini, Roberto and Gilardi, Antonio and Mostacci, Andrea and Sabato, Luca and Sjobak, Kyrre N},
+  journal={Scientific reports},
+  volume={10},
+  number={1},
+  pages={11457},
+  year={2020},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{mcmanus2020challenge,
+  title={The challenge of ionisation chamber dosimetry in ultra-short pulsed high dose-rate Very High Energy Electron beams},
+  author={McManus, M and Romano, F and Lee, ND and Farabolini, W and Gilardi, A and Royle, G and Palmans, H and Subiel, Anna},
+  journal={Scientific reports},
+  volume={10},
+  number={1},
+  pages={9089},
+  year={2020},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{curcio2020noninvasive,
+  title={Noninvasive bunch length measurements exploiting Cherenkov diffraction radiation},
+  author={Curcio, A and Bergamaschi, M and Corsini, R and Farabolini, W and Gamba, D and Garolfi, L and Kieffer, R and Lefevre, T and Mazzoni, S and Fedorov, K and others},
+  journal={Physical Review Accelerators and Beams},
+  volume={23},
+  number={2},
+  pages={022802},
+  year={2020},
+  publisher={APS}
+}
+
+@article{arpaia2019reducing,
+  title={Reducing parasitic resonances in particle accelerators components by broadband Higher--Order--Mode couplers},
+  author={Arpaia, Pasquale and Berrig, Olav E and De Vito, Luca and Gilardi, Antonio},
+  journal={Measurement},
+  volume={146},
+  pages={938--947},
+  year={2019},
+  publisher={Elsevier}
+}
+
 
 
 
