--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,6 +5,8 @@
 
 
 @article{adli2025clic,
+  abbr={Springer},
+  bibtex_show={true},
   title={CLIC readiness report},
   author={CLIC Collaboration},
   journal={The European Physical Journal Special Topics},
@@ -232,22 +234,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
 
 @book{einstein1956investigations,
   bibtex_show={true},
