--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,6 +16,8 @@
 }
 
 @article{rieker2025radiochromic,
+  abbr={Frontiers in Physics},
+  bibtex_show={true},
   title={Radiochromic film dosimetry for VHEE and UHDR: protocol adaptation and verification at the CLEAR facility},
   author={Rieker, Vilde F and Bateman, Joseph J and Wroe, Laurence and Caloz, Misael and Grilj, Veljko and Aguiar, Ygor Q and Sch{\"u}ller, Andreas and Bailat, Claude and Farabolini, Wilfrid and Gilardi, Antonio and others},
   journal={Frontiers in Physics},
@@ -26,6 +28,8 @@
 }
 
 @article{king2025systematic,
+  abbr={MDPI},
+  bibtex_show={true},
   title={A systematic investigation of beam losses and position-reconstruction techniques measured with a novel oBLM at CLEAR},
   author={King, Montague and Benitez, Sara and Christie, Alexander and Effinger, Ewald and Esteban, Jose and Farabolini, Wilfrid and Gilardi, Antonio and Korysko, Pierre and Meyer, Jean Michel and Salvachua, Belen and others},
   journal={Instruments},
@@ -37,6 +41,9 @@
 }
 
 @article{rieker2024active,
+  abbr={Elsevier},
+  bibtex_show={true},
+
   title={Active dosimetry for VHEE FLASH radiotherapy using beam profile monitors and charge measurements},
   author={Rieker, Vilde F and Corsini, Roberto and Stapnes, Steinar and Adli, Erik and Farabolini, Wilfrid and Grilj, Veljko and Sjobak, Kyrre N and Wroe, Laurence M and Aksoy, Avni and Robertson, Cameron S and others},
   journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
@@ -47,6 +54,9 @@
 }
 
 @article{arpaia2024roadmap,
+  abbr={IEEE},
+  bibtex_show={true},
+
   title={Roadmap for Measurement and Applications: An Overview on Quench Detection Techniques for High-Temperature Superconducting Cables and Magnets},
   author={Arpaia, Pasquale and Cuneo, Davide and Esposito, Antonio and Gilardi, Antonio and Ramos, Pedro M},
   journal={IEEE Instrumentation \& Measurement Magazine},
@@ -58,6 +68,9 @@
 }
 
 @article{liu2023user,
+  abbr={IUC},
+  bibtex_show={true},
+
   title={A user-friendly plug-and-play cyclic olefin copolymer-based microfluidic chip for room-temperature, fixed-target serial crystallography},
   author={Liu, Zhongrui and Gu, Kevin K and Shelby, Megan L and Gilbile, Deepshika and Lyubimov, Artem Y and Russi, Silvia and Cohen, Aina E and Narayanasamy, Sankar Raju and Botha, Sabine and Kupitz, Christopher and others},
   journal={Biological Crystallography},
@@ -69,6 +82,9 @@
 }
 
 @article{ferrentino2023analysis,
+  abbr={IEEE},
+  bibtex_show={true},
+
   title={Analysis of powering and quench protection of the SIGRUM superconducting combined-function dipole magnet},
   author={Ferrentino, Vittorio and Arpaia, Pasquale and Gilardi, Antonio and Karppinen, Mikko and Kokkinos, Charilaos and Ravaioli, Emmanuele},
   journal={IEEE Transactions on Applied Superconductivity},
@@ -80,6 +96,9 @@
 }
 
 @article{cropp2023virtual,
+  abbr={APS},
+  bibtex_show={true},
+
   title={Virtual-diagnostic-based time stamping for ultrafast electron diffraction},
   author={Cropp, Frederick and Moos, Lauren and Scheinker, Alexander and Gilardi, Antonio and Wang, Dan and Paiagua, Sergio and Serrano, Carlos and Musumeci, Pietro and Filippetto, Daniele},
   journal={Physical Review Accelerators and Beams},
@@ -91,6 +110,9 @@
 }
 
 @article{chen2023broadband,
+  abbr={Optics},
+  bibtex_show={true},
+
   title={Broadband spectral combining of three pulse-shaped fiber amplifiers with 42fs compressed pulse duration},
   author={Chen, Siyun and Zhou, Tong and Du, Qiang and Wang, Dan and Gilardi, Antonio and Vay, Jean-Luc and Li, Derun and van Tilborg, Jeroen and Schroeder, Carl and Esarey, Eric and others},
   journal={Optics Express},
@@ -102,6 +124,9 @@
 }
 
 @article{lauria2022rotating,
+  abbr={MDPI},
+  bibtex_show={true},
+
   title={Rotating-coil measurement system for small-bore-diameter magnet characterization},
   author={Lauria, Anna and Arpaia, Pasquale and Buzio, Marco and Gilardi, Antonio and Parvis, Marco and Pentella, Mariano and Sabbatini, Lucia and Simoni, Enzo and Vannozzi, Alessandro},
   journal={Sensors},
@@ -113,6 +138,9 @@
 }
 
 @article{wang2022machine,
+  abbr={IEEE},
+  bibtex_show={true},
+
   title={Machine learning pattern recognition algorithm with applications to coherent laser combination},
   author={Wang, Dan and Du, Qiang and Zhou, Tong and Gilardi, Antonio and Kiran, Mariam and Mohammed, Bashir and Li, Derun and Wilcox, Russell},
   journal={IEEE Journal of Quantum Electronics},
@@ -124,6 +152,9 @@
 }
 
 @article{du2022experimental,
+  abbr={Optica},
+  bibtex_show={true},
+
   title={Experimental beam combining stabilization using machine learning trained while phases drift},
   author={Du, Qiang and Wang, Dan and Zhou, Tong and Gilardi, Antonio and Kiran, Mariam and Mohammed, Bashir and Li, Derun and Wilcox, Russell},
   journal={Optics Express},
@@ -135,6 +166,9 @@
 }
 
 @article{lerner2022analysis,
+  abbr={IEEE},
+  bibtex_show={true},
+
   title={Analysis of the photoneutron field near the THz dump of the CLEAR accelerator at CERN with SEU measurements and simulations},
   author={Lerner, Giuseppe and Coronetti, Andrea and Kempf, Jean Ma{\"e}l and Al{\'\i}a, Rub{\'e}n Garc{\'\i}a and Cerutti, Francesco and Prelipcean, Daniel and Cecchetto, Matteo and Gilardi, Antonio and Farabolini, Wilfrid and Corsini, Roberto},
   journal={IEEE Transactions on Nuclear Science},
@@ -146,6 +180,9 @@
 }
 
 @article{kokurewicz2021experimental,
+  abbr={Nature},
+  bibtex_show={true},
+
   title={An experimental study of focused very high energy electron beams for radiotherapy},
   author={Kokurewicz, Karolina and Brunetti, Enrico and Curcio, Alessandro and Gamba, Davide and Garolfi, Luca and Gilardi, Antonio and Senes, Eugenio and Sjobak, Kyrre Ness and Farabolini, Wilfrid and Corsini, Roberto and others},
   journal={Communications Physics},
@@ -157,6 +194,9 @@
 }
 
 @article{small2021evaluating,
+  abbr={Nature},
+  bibtex_show={true},
+
   title={Evaluating very high energy electron RBE from nanodosimetric pBR322 plasmid DNA damage},
   author={Small, KL and Henthorn, NT and Angal-Kalinin, Deepa and Chadwick, AL and Santina, Elham and Aitkenhead, Adam and Kirkby, Karen J and Smith, RJ and Surman, M and Jones, J and others},
   journal={Scientific Reports},
@@ -168,6 +208,9 @@
 }
 
 @article{poppinga2020vhee,
+  abbr={IOP},
+  bibtex_show={true},
+
   title={VHEE beam dosimetry at CERN Linear Electron Accelerator for Research under ultra-high dose rate conditions},
   author={Poppinga, Daniela and Kranzer, Rafael and Farabolini, Wilfrid and Gilardi, Antonio and Corsini, Roberto and Wyrwoll, Vanessa and Looe, Hui Khee and Delfs, Bj{\"o}rn and Gabrisch, Lukas and Poppe, Bj{\"o}rn},
   journal={Biomedical Physics \& Engineering Express},
@@ -179,6 +222,9 @@
 }
 
 @article{sabato2020measurement,
+  abbr={IEEE},
+  bibtex_show={true},
+
   title={A measurement method based on RF deflector for particle bunch longitudinal parameters in linear accelerators},
   author={Sabato, Luca and Arpaia, Pasquale and Gilardi, Antonio and Mostacci, Andrea and Palumbo, Luigi and Variola, Alessandro},
   journal={IEEE Transactions on Instrumentation and Measurement},
@@ -189,6 +235,9 @@
 }
 
 @article{arpaia2020enhancing,
+  abbr={Nature},
+  bibtex_show={true},
+
   title={Enhancing particle bunch-length measurements based on radio frequency deflector by the use of focusing elements},
   author={Arpaia, Pasquale and Corsini, Roberto and Gilardi, Antonio and Mostacci, Andrea and Sabato, Luca and Sjobak, Kyrre N},
   journal={Scientific reports},
@@ -200,6 +249,9 @@
 }
 
 @article{mcmanus2020challenge,
+  abbr={Nature},
+  bibtex_show={true},
+
   title={The challenge of ionisation chamber dosimetry in ultra-short pulsed high dose-rate Very High Energy Electron beams},
   author={McManus, M and Romano, F and Lee, ND and Farabolini, W and Gilardi, A and Royle, G and Palmans, H and Subiel, Anna},
   journal={Scientific reports},
@@ -211,6 +263,9 @@
 }
 
 @article{curcio2020noninvasive,
+  abbr={APS},
+  bibtex_show={true},
+
   title={Noninvasive bunch length measurements exploiting Cherenkov diffraction radiation},
   author={Curcio, A and Bergamaschi, M and Corsini, R and Farabolini, W and Gamba, D and Garolfi, L and Kieffer, R and Lefevre, T and Mazzoni, S and Fedorov, K and others},
   journal={Physical Review Accelerators and Beams},
@@ -222,6 +277,9 @@
 }
 
 @article{arpaia2019reducing,
+  abbr={Elsevier},
+  bibtex_show={true},
+
   title={Reducing parasitic resonances in particle accelerators components by broadband Higher--Order--Mode couplers},
   author={Arpaia, Pasquale and Berrig, Olav E and De Vito, Luca and Gilardi, Antonio},
   journal={Measurement},
