--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@string{aps = {American Physical Society}, Springer, Frontiers in Physics, MDPI, Elsevier, IEEE, IUC, Nature, IOP}
 
 
 @article{adli2025clic,
