--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -289,7 +289,6 @@
   publisher={Elsevier}
 }
 
-
 %@article{PhysRev.47.777,
 %  abbr={PhysRev},
 %  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
@@ -303,7 +302,7 @@
 %  numpages={0},
 %  year={1935},
 %  month={May},
-%  publisher=aps,
+%  publisher={aps},
 %  doi={10.1103/PhysRev.47.777},
 %  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
 %  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
@@ -315,8 +314,8 @@
 %  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
 %  annotation={* Example use of superscripts<br>† Albert Einstein},
 %  selected={true},
-%  inspirehep_id = {3255}
-%  preview={brownian-motion.gif}
-%  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
+%  inspirehep_id={3255},
+%  preview={brownian-motion.gif},
+%  award={Albert Einstein received the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
 %  award_name={Nobel Prize}
 %}
