--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,7 +31,7 @@
   abbr={MDPI},
   bibtex_show={true},
   title={A systematic investigation of beam losses and position-reconstruction techniques measured with a novel oBLM at CLEAR},
-  author={King, Montague and Benitez, Sara and Christie, Alexander and Effinger, Ewald and Esteban, Jose and Farabolini, Wilfrid and Gilardi, Antonio and Korysko, Pierre and Meyer, Jean Michel and Salvachua, Belen and others},
+  author={King, Montague and Benitez, Sara and Gilardi, Antonio and Christie, Alexander and Effinger, Ewald and Esteban, Jose and Farabolini, Wilfrid and Gilardi, Antonio and Korysko, Pierre and Meyer, Jean Michel and Salvachua, Belen and others},
   journal={Instruments},
   volume={9},
   number={1},
@@ -45,7 +45,7 @@
   bibtex_show={true},
 
   title={Active dosimetry for VHEE FLASH radiotherapy using beam profile monitors and charge measurements},
-  author={Rieker, Vilde F and Corsini, Roberto and Stapnes, Steinar and Adli, Erik and Farabolini, Wilfrid and Grilj, Veljko and Sjobak, Kyrre N and Wroe, Laurence M and Aksoy, Avni and Robertson, Cameron S and others},
+  author={Rieker, Vilde F and Corsini, Roberto and Gilardi, Antonioand Stapnes, Steinar and Adli, Erik and Farabolini, Wilfrid and Grilj, Veljko and Sjobak, Kyrre N and Wroe, Laurence M and Aksoy, Avni and Robertson, Cameron S and others},
   journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
   volume={1069},
   pages={169845},
@@ -72,7 +72,7 @@
   bibtex_show={true},
 
   title={A user-friendly plug-and-play cyclic olefin copolymer-based microfluidic chip for room-temperature, fixed-target serial crystallography},
-  author={Liu, Zhongrui and Gu, Kevin K and Shelby, Megan L and Gilbile, Deepshika and Lyubimov, Artem Y and Russi, Silvia and Cohen, Aina E and Narayanasamy, Sankar Raju and Botha, Sabine and Kupitz, Christopher and others},
+  author={Liu, Zhongrui and Gu, Kevin K and Shelby, Megan L and Gilbile, Deepshika and Lyubimov, Artem Y and Russi, Silvia and Cohen, Aina E and Narayanasamy, Sankar Raju and Botha, Sabine and Kupitz, Christopher and Gilardi, Antonio and others},
   journal={Biological Crystallography},
   volume={79},
   number={10},
@@ -198,7 +198,7 @@
   bibtex_show={true},
 
   title={Evaluating very high energy electron RBE from nanodosimetric pBR322 plasmid DNA damage},
-  author={Small, KL and Henthorn, NT and Angal-Kalinin, Deepa and Chadwick, AL and Santina, Elham and Aitkenhead, Adam and Kirkby, Karen J and Smith, RJ and Surman, M and Jones, J and others},
+  author={Small, KL and Henthorn, NT and Angal-Kalinin, Deepa and Chadwick, AL and Santina, Elham and Aitkenhead, Adam and Kirkby, Karen J and Smith, RJ and Surman, M and Jones, J and Gilardi, Antonioand others},
   journal={Scientific Reports},
   volume={11},
   number={1},
@@ -267,7 +267,7 @@
   bibtex_show={true},
 
   title={Noninvasive bunch length measurements exploiting Cherenkov diffraction radiation},
-  author={Curcio, A and Bergamaschi, M and Corsini, R and Farabolini, W and Gamba, D and Garolfi, L and Kieffer, R and Lefevre, T and Mazzoni, S and Fedorov, K and others},
+  author={Curcio, A and Bergamaschi, M and Corsini, R and Gilardi, A and Farabolini, W and Gamba, D and Garolfi, L and Kieffer, R and Lefevre, T and Mazzoni, S and Fedorov, K and others},
   journal={Physical Review Accelerators and Beams},
   volume={23},
   number={2},
@@ -288,34 +288,3 @@
   year={2019},
   publisher={Elsevier}
 }
-
-%@article{PhysRev.47.777,
-%  abbr={PhysRev},
-%  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-%  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-%  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-%  journal={Phys. Rev.},
-%  location={New Jersey},
-%  volume={47},
-%  issue={10},
-%  pages={777--780},
-%  numpages={0},
-%  year={1935},
-%  month={May},
-%  publisher={aps},
-%  doi={10.1103/PhysRev.47.777},
-%  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-%  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-%  pdf={example_pdf.pdf},
-%  altmetric={248277},
-%  dimensions={true},
-%  google_scholar_id={qyhmnyLat1gC},
-%  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-%  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-%  annotation={* Example use of superscripts<br>† Albert Einstein},
-%  selected={true},
-%  inspirehep_id={3255},
-%  preview={brownian-motion.gif},
-%  award={Albert Einstein received the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-%  award_name={Nobel Prize}
-%}
