--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,15 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}, Springer, Frontiers in Physics, MDPI, Elsevier, IEEE, IUC, Nature, IOP}
-
+@string{aps      = {American Physical Society}}
+@string{springer = {Springer}}
+@string{fip      = {Frontiers in Physics}}
+@string{mdpi     = {MDPI}}
+@string{elsevier = {Elsevier}}
+@string{ieee     = {IEEE}}
+@string{iuc      = {International Union of Crystallography}}
+@string{nature   = {Nature}}
+@string{iop      = {IOP Publishing}}
 
 @article{adli2025clic,
   abbr={Springer},
@@ -45,7 +52,7 @@
   bibtex_show={true},
 
   title={Active dosimetry for VHEE FLASH radiotherapy using beam profile monitors and charge measurements},
-  author={Rieker, Vilde F and Corsini, Roberto and Gilardi, Antonioand Stapnes, Steinar and Adli, Erik and Farabolini, Wilfrid and Grilj, Veljko and Sjobak, Kyrre N and Wroe, Laurence M and Aksoy, Avni and Robertson, Cameron S and others},
+  author={Rieker, Vilde F and Corsini, Roberto and Gilardi, Antonio and Stapnes, Steinar and Adli, Erik and Farabolini, Wilfrid and Grilj, Veljko and Sjobak, Kyrre N and Wroe, Laurence M and Aksoy, Avni and Robertson, Cameron S and others},
   journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
   volume={1069},
   pages={169845},
@@ -198,7 +205,7 @@
   bibtex_show={true},
 
   title={Evaluating very high energy electron RBE from nanodosimetric pBR322 plasmid DNA damage},
-  author={Small, KL and Henthorn, NT and Angal-Kalinin, Deepa and Chadwick, AL and Santina, Elham and Aitkenhead, Adam and Kirkby, Karen J and Smith, RJ and Surman, M and Jones, J and Gilardi, Antonioand others},
+  author={Small, KL and Henthorn, NT and Angal-Kalinin, Deepa and Chadwick, AL and Santina, Elham and Aitkenhead, Adam and Kirkby, Karen J and Smith, RJ and Surman, M and Jones, J and Gilardi, Antonio and others},
   journal={Scientific Reports},
   volume={11},
   number={1},
